--- a/html/index.html
+++ b/html/index.html
@@ -1019,9 +1019,9 @@
                   
       <div
          style="font-family:Arial, Helvetica, sans-serif;font-size:16px;font-weight:400;line-height:20px;text-align:left;color:#2D3748;"
-      >Notre programme pédagogique a été conçu <span style="font-weight:700;">en étroite collaboration avec les professionnels du secteur</span> afin de vous proposer des étudiants aux compétences pointues et prêts à s'investir dans vos équipes. Cette année, nous avons mis l'accents sur :    
+      >Notre programme pédagogique a été conçu <span style="font-weight:700;">en étroite collaboration avec les professionnels du secteur</span> afin de vous proposer des étudiants aux compétences pointues et prêts à s'investir dans vos équipes. Cette année, nous avons mis l'accent sur :    
           <ul align="left" style="list-style-type:disc; padding:0 0 0 20px; margin:10px 0;"> 
-            <li style="text-align:left; margin:0 0 10px 0;"><span style="font-weight:700;">Le savoir-être :</span> une exigence particulière lors des entretiens et des ateliers, conférence et intervention tout au long du cursus pour allier formation théorique et savoir être en entreprise.</li>
+            <li style="text-align:left; margin:0 0 10px 0;"><span style="font-weight:700;">Le savoir-être :</span> une exigence particulière lors des entretiens et des ateliers, conférences et interventions tout au long du cursus pour allier formation théorique et savoir être en entreprise.</li>
             <li style="text-align:left; margin:0 0 10px 0;"><span style="font-weight:700;">La digitalisation et l'entreprise responsable :</span> pour répondre aux besoins d'un marché en perpétuelle évolution, nos formations s'adaptent aux nouvelles technologies : intelligence artificielle, réseaux sociaux... mais également sur les valeurs de développement durable, RSE...</li>
             <li style="text-align:left; margin:0;"><span style="font-weight:700;">L'accompagnement :</span> car nous savons depuis toujours chez Ecosup Assurance que la clé d'une formation réussie est l'engagement sans faille de nos équipes dans l'accompagnement des élèves mais également un engagement à être toujours auprès de vous !</li>
           </ul></div>
